# prisma

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md
doc/: conversion_paths.dot
src/: alpha.rs  channel.rs  chromaticity.rs  color.rs  conversion.rs  convert.rs  ehsi.rs  from.rs  hsi.rs  hsl.rs  hsv.rs  hue_angle.rs  hwb.rs  impl_macros.rs  lab.rs  lchab.rs  lchuv.rs  lib.rs  linalg.rs  lms.rs  luv.rs  rgb.rs  rgi.rs  tags.rs  test_data.rs  white_point.rs  xyy.rs  xyz.rs  ycbcr.rs
src/channel/: angular_channel.rs  bounded_channel.rs  cast.rs  data_traits.rs  free_channel.rs  mod.rs  scalar.rs  traits.rs
src/color_space/: color.rs  color_space.rs  mod.rs  named.rs  presets.rs  primary.rs  spaced_color.rs
src/encoding/: encode.rs  encoded_color.rs  mod.rs
src/test/: hwb_test_data.rs  mod.rs  rgb_hs_test_data.rs
src/white_point/: deg_10.rs  deg_2.rs  mod.rs
src/ycbcr/: bare_ycbcr.rs  mod.rs  model.rs  ycbcr.rs
