[package]
name = "prisma"
version = "0.1.0"
authors = ["Tyler Reisinger <reisinger.tyler@gmail.com>"]
edition = "2018"

[dependencies]
num-traits = "^0.2"
approx = { version = "^0.3", optional = true }
angular-units = "^0.2.4"

[features]
default = ["approx"]

[dev.dependencies]
bencher = "0.1.2"
approx = "0.3.0"

[package.metadata.docs.rs]
rustdoc-args = [
    "--html-in-header",
    ".cargo/registry/src/github.com-1ecc6299db9ec823/katex-doc-0.1.0/katex.html",
]
