[package]
name = "prisma"
version = "0.1.0"
authors = ["Tyler Reisinger <reisinger.tyler@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A color library for both simple and complex color manipulation, intending to be the go to rust color library for most tasks. It can handle conversion between a large number of color models, and can convert into the CIE device independent color spaces. Prisma tries to be easy to use while encouraging correct transformations, making mathematically correct conversions easy without knowing the whole field of color science."
readme = "README.md"
repository = "https://github.com/tylerreisinger/prisma"
keywords = ["color", "graphics", "rgb", "hsv", "CIE"]
categories = ["computer-vision", "graphics"]

[dependencies]
num-traits = "^0.2"
approx = { version = "^0.3", optional = true }
angular-units = "^0.2.4"

[features]
default = ["approx"]

[dev.dependencies]
bencher = "0.1.2"
approx = "0.3.0"

[package.metadata.docs.rs]
rustdoc-args = [
    "--html-in-header",
    ".cargo/registry/src/github.com-1ecc6299db9ec823/katex-doc-0.1.0/katex.html",
]
