[package]
name = "prisma"
version = "0.1.0"
authors = ["Tyler Reisinger <reisinger.tyler@gmail.com>"]
edition = "2018"

[dependencies]
num-traits = "^0.2"
approx = { version = "^0.3", optional = true }
angular-units = "^0.2.4"
serde = { version = "1.0", optional = true, features = ["derive"] }
serde_unit_struct = { version = "0.1.1", optional = true }

[features]
default = ["approx"]
serde = ["dep:serde", "angular-units/serde", "dep:serde_unit_struct"]

[dev-dependencies]
bencher = "0.1.2"
approx = "0.3.0"
serde_json = "1.0"

[package.metadata.docs.rs]
rustdoc-args = [
    "--html-in-header",
    ".cargo/registry/src/github.com-1ecc6299db9ec823/katex-doc-0.1.0/katex.html",
]
